
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = IDConn/_version.py
versionfile_build = IDConn/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude = *build/,info.py,_version.py,due.py
putty-ignore =
    */__init__.py : +F401
ignore = E203,E402,E722,W503
